--- a/themes/luxe_jet_life_modern_theme/layouts/_default/baseof.html
+++ b/themes/luxe_jet_life_modern_theme/layouts/_default/baseof.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>{{ .Title }}</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
-</head>
-<body>
-  {{ partial "header.html" . }}
-  <div class="container">
-    {{ block "main" . }}{{ end }}
-  </div>
-  {{ partial "footer.html" . }}
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>{{ .Title }}</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="{{ "css/style.css" | absURL }}" />
+  </head>
+  <body>
+    {{ partial "header.html" . }}
+    <main class="container">
+      {{ block "main" . }}{{ end }}
+    </main>
+    {{ partial "footer.html" . }}
+  </body>
 </html>
