--- a/themes/luxe_jet_life_modern_theme/layouts/partials/header.html
+++ b/themes/luxe_jet_life_modern_theme/layouts/partials/header.html
@@ -1,13 +1,5 @@
-<header>
-  <nav>
-    <div class="brand">Luxe Jet Life</div>
-    <ul class="nav-links">
-      <li><a href="/">Home</a></li>
-      <li><a href="/posts/">Posts</a></li>
-      <li><a href="/hotels/">Hotels</a></li>
-      <li><a href="/airlines/">Airlines</a></li>
-      <li><a href="/attractions/">Attractions</a></li>
-      <li><a href="/deals/">Deals</a></li>
-    </ul>
-  </nav>
+<header class="site-header">
+  <div class="header-inner">
+    <h1 class="site-title">{{ .Site.Title }}</h1>
+  </div>
 </header>
