--- a/themes/luxe_jet_life_modern_theme/static/css/style.css
+++ b/themes/luxe_jet_life_modern_theme/static/css/style.css
@@ -45,12 +45,14 @@ body {
   text-decoration: none;
 }
 
-.main-nav ul {
+.main-nav ul,
+.nav-list {
   list-style: none;
   display: flex;
   gap: 1.5rem;
   margin: 0;
   padding: 0;
+  align-items: center;
 }
 
 .main-nav a {
