--- a/themes/luxe_jet_life_modern_theme/layouts/partials/header.html
+++ b/themes/luxe_jet_life_modern_theme/layouts/partials/header.html
@@ -4,7 +4,7 @@
       <a href="{{ "/" | relURL }}">{{ .Site.Title }}</a>
     </div>
     <nav class="main-nav">
-      <ul class="nav-list">
+      <ul class="main-nav-list">
         <li><a href="{{ "posts/" | relURL }}">Blog</a></li>
         <li><a href="{{ "airlines/" | relURL }}">Airlines</a></li>
         <li><a href="{{ "hotels/" | relURL }}">Hotels</a></li>
