--- a/themes/luxe_jet_life_modern_theme/layouts/_default/baseof.html
+++ b/themes/luxe_jet_life_modern_theme/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>{{ .Title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="{{ "css/style.css" | absURL }}" />
+    <link rel="stylesheet" href="{{ "css/style.css" | relURL }}">
   </head>
   <body>
     {{ partial "header.html" . }}
